# receipt-task-printer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  ENHANCEMENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: container.yml
src/: __init__.py
src/task_card_generator/: __init__.py  html_generator.py  printer.py  web_app.py
src/task_card_generator/static/: task.html  todolist.html
src/task_card_generator/static/css/: common.css
src/task_card_generator/static/js/: common.js  task.js  todolist.js
tests/: test_web_app.py
